--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-assert": "^1.4.1",
     "inflection": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.26.0",
     "mongoose": "^5.5.13",
     "multer": "^1.4.1",
     "node-schedule": "^1.3.2",
